--- a/View/Customer/ListCustomerUCView.xaml
+++ b/View/Customer/ListCustomerUCView.xaml
@@ -42,6 +42,6 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Command="{Binding cmdFormAddRequest}" Content="Ajouter" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="75" Margin="0,0,0,20"/>
+        <Button Command="{Binding cmdAddRequest}" Content="Ajouter" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="75" Margin="0,0,0,20"/>
     </Grid>
 </UserControl>
