--- a/View/Customer/CustomerUCView.xaml
+++ b/View/Customer/CustomerUCView.xaml
@@ -6,11 +6,20 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <TabControl Margin="10,50,10,10" ItemsSource="{Binding customerTabs}" TabStripPlacement="Left" SelectedItem="{Binding selectedTab}"  >
+        <TabControl Name="TabControl" Margin="10,50,10,10" ItemsSource="{Binding customerTabs}" SelectedItem="{Binding selectedTab}">
             <TabControl.ItemContainerStyle>
                 <Style TargetType="TabItem">
-                    <Setter Property="Header" Value="{Binding header}" />
                     <Setter Property="Content" Value="{Binding content}" />
+                    <Setter Property="HeaderTemplate">
+                        <Setter.Value>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock VerticalAlignment="Center" Text="{Binding header}" />
+                                    <Button Margin="10,0,0,0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding ElementName=TabControl, Path=DataContext.cmdCloseTab}" CommandParameter="{Binding}">X</Button>
+                                </StackPanel>
+                            </DataTemplate>
+                        </Setter.Value>
+                    </Setter>
                 </Style>
             </TabControl.ItemContainerStyle>
         </TabControl>
