--- a/View/Customer/ShowCustomerUCView.xaml
+++ b/View/Customer/ShowCustomerUCView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="PrototypeEDUCOM.View.Customer.ShowCustumerUCView"
+﻿<UserControl x:Class="PrototypeEDUCOM.View.Customer.ShowCustomerUCView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" Width="565">
+             d:DesignHeight="600" d:DesignWidth="800">
     <Grid>
         <Label Content="Titre" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" FontWeight="Bold"/>
         <Label Content="Nom" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,40,0,0" FontWeight="Bold"/>
@@ -26,7 +26,5 @@
         <Label Content="Titre" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="388,100,0,0"/>
         <Label Content="Titre" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="388,130,0,0"/>
         <Label Content="Titre" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="388,160,0,0"/>
-
-
     </Grid>
 </UserControl>
