--- a/View/Customer/ListCustomerUCView.xaml
+++ b/View/Customer/ListCustomerUCView.xaml
@@ -26,7 +26,7 @@
                         <GridViewColumn>
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
-                                    <Button Content="Editer" Command="{Binding ElementName=list, Path=DataContext.cmdFormEditRequest}" CommandParameter="{Binding}" />
+                                    <Button Content="Editer" Command="{Binding ElementName=list, Path=DataContext.cmdEdit}" CommandParameter="{Binding}" />
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
@@ -42,6 +42,6 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Command="{Binding cmdAddRequest}" Content="Ajouter" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="75" Margin="0,0,0,20"/>
+        <Button Command="{Binding cmdAdd}" Content="Ajouter" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="75" Margin="0,0,0,20"/>
     </Grid>
 </UserControl>
