--- a/View/LoginView.xaml
+++ b/View/LoginView.xaml
@@ -1,14 +1,14 @@
 ﻿<Window x:Class="PrototypeEDUCOM.View.LoginView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="LoginView" Height="300" Width="300">
+        Title="Connexion EDUCCOM Manager" Height="350" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Label Content="Login EDUCOM Manager" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
-        <Button Content="Connexion" Command="{Binding btnLogin}" HorizontalAlignment="Left" Margin="81,191,0,0" VerticalAlignment="Top" Width="132"/>
-        <TextBox HorizontalAlignment="Left" Text="{Binding login, Mode=OneWayToSource}" Height="23" Margin="111,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Text="{Binding pass, Mode=OneWayToSource}" Height="23" Margin="111,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Name="login" Content="Login" HorizontalAlignment="Left" Margin="64,96,0,0" VerticalAlignment="Top"/>
-        <Label Content="Pass" HorizontalAlignment="Left" Margin="70,138,0,0" VerticalAlignment="Top"/>
-        <Label Content="{Binding message}" HorizontalAlignment="Left" Margin="70,46,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="#FFE63333" Height="33" Width="161"/>
+        <Button Content="Connexion" Command="{Binding btnLogin}" HorizontalAlignment="Left" Margin="78,273,0,0" VerticalAlignment="Top" Width="132"/>
+        <TextBox HorizontalAlignment="Left" Text="{Binding login, Mode=OneWayToSource}" Height="23" Margin="108,178,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Text="{Binding pass, Mode=OneWayToSource}" Height="23" Margin="108,220,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label Name="login" Content="Login" HorizontalAlignment="Left" Margin="61,178,0,0" VerticalAlignment="Top"/>
+        <Label Content="Pass" HorizontalAlignment="Left" Margin="67,220,0,0" VerticalAlignment="Top"/>
+        <Label Content="{Binding message}" HorizontalAlignment="Left" Margin="67,128,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="#FFE63333" Height="33" Width="161"/>
+        <Image Source="../Ressource/logo.png" HorizontalAlignment="Left" Height="100" Margin="10,23,0,0" VerticalAlignment="Top" Width="272"/>
     </Grid>
 </Window>
