--- a/View/MainView.xaml
+++ b/View/MainView.xaml
@@ -2,19 +2,19 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:PrototypeEDUCOM.View"
-        Title="MainView" Height="700" Width="1000">
+        Title="EDUCOM Manager" Height="700" Width="1000">
     <Grid>
-        <TabControl Margin="10,50,10,10" ItemsSource="{Binding tabs}">
-            
+        <TabControl Margin="10,113,10,10" ItemsSource="{Binding tabs}">
+
             <TabControl.ItemContainerStyle>
                 <Style TargetType="TabItem">
                     <Setter Property="Content" Value="{Binding content}" />
                     <Setter Property="HeaderTemplate">
                         <Setter.Value>
                             <DataTemplate DataType="TabItem">
-                                <StackPanel>
+                                <StackPanel Width="120">
                                     <Image Source="{Binding icon}" Width="40" Height="40"/>
-                                    <TextBlock Text="{Binding header}" FontSize="20" />
+                                    <TextBlock Text="{Binding header}" FontSize="20" HorizontalAlignment="Center" />
                                 </StackPanel>
                             </DataTemplate>
                         </Setter.Value>
@@ -22,5 +22,16 @@
                 </Style>
             </TabControl.ItemContainerStyle>
         </TabControl>
+        <Image Source="../Ressource/logo.png" HorizontalAlignment="Left" Height="79" Margin="10,15,0,0" VerticalAlignment="Top" Width="256"/>
+        <TextBox HorizontalAlignment="Left" Height="37" Margin="294,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="410" FontSize="22"/>
+        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Left" Margin="703,35,0,0" VerticalAlignment="Top" Width="40" Height="37"  Background="#FFEEEEEE" BorderBrush="#FFAAAAAA">
+            <Image Source="../Ressource/search.png" />
+        </Button>
+        <CheckBox Content="Cients" HorizontalAlignment="Left" Margin="297,81,0,0" VerticalAlignment="Top"/>
+        <CheckBox Content="Demandes" HorizontalAlignment="Left" Margin="371,81,0,0" VerticalAlignment="Top"/>
+        <CheckBox Content="Organisations" HorizontalAlignment="Left" Margin="467,81,0,0" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="790,10,0,0" TextWrapping="Wrap" Text="A Propos" VerticalAlignment="Top" TextDecorations="Underline"/>
+        <TextBlock HorizontalAlignment="Left" Margin="862,10,0,0" TextWrapping="Wrap" Text="Aide" VerticalAlignment="Top" TextDecorations="Underline"/>
+        <TextBlock HorizontalAlignment="Left" Margin="908,10,0,0" TextWrapping="Wrap" Text="Déconnexion" VerticalAlignment="Top" TextDecorations="Underline"/>
     </Grid>
 </Window>
