modif ajout client

--- a/View/Customer/AddCustomerView.xaml
+++ b/View/Customer/AddCustomerView.xaml
@@ -1,13 +1,30 @@
 ﻿<Window x:Class="PrototypeEDUCOM.View.Customer.AddCustomerView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="AddCustomerView" Height="300" Width="300">
+        Title="AddCustomerView" Height="443" Width="461">
     <Grid>
-        <Label Content="Prénom" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="68,94,0,0"/>
-        <Label Content="Nom" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="83,128,0,0"/>
-        <Button Command="{Binding cmdAdd}" Content="Ajouter" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="75" Margin="0,0,0,10"/>
-        <TextBox Text="{Binding firstname, Mode=OneWayToSource}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="125,94,0,0"/>
-        <TextBox Text="{Binding lastname, Mode=OneWayToSource}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="125,131,0,0"/>
+        <Label Content="Prénom" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="40,97,0,0"/>
+        <Label Content="Nom" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="244,94,0,0"/>
+        <Button Command="{Binding cmdAdd}" Content="Ajouter" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="74" Margin="192,0,174,23"/>
+        <TextBox Text="{Binding firstname, Mode=OneWayToSource}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="97,97,0,0"/>
+        <TextBox Text="{Binding lastname, Mode=OneWayToSource}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="286,97,0,0"/>
         <Label Content="Ajouter un client" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" />
+        <Label Content="Rue" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="55,188,0,0"/>
+        <Label Content="Ville" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="56,222,0,0"/>
+        <TextBox Text="{Binding street, Mode=OneWayToSource}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="98,188,0,0"/>
+        <TextBox Text="{Binding city, Mode=OneWayToSource}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="98,225,0,0"/>
+        <Label Content="NPA" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="243,188,0,0"/>
+        <Label Content="Pays" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="243,222,0,0"/>
+        <TextBox Text="{Binding zip, Mode=OneWayToSource}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="287,188,0,0"/>
+        <TextBox Text="{Binding country, Mode=OneWayToSource}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="287,225,0,0"/>
+        <Label Content="Civilité" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="44,57,0,0"/>
+        <RadioButton GroupName="civility" Content="M." HorizontalAlignment="Left" Margin="109,62,0,0" VerticalAlignment="Top"/>
+        <RadioButton GroupName="civility" Content="Mme." HorizontalAlignment="Left" Margin="160,62,0,0" VerticalAlignment="Top"/>
+        <Label Content="Adresse" HorizontalAlignment="Left" Margin="11,147,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+        <Label Content="Tél." HorizontalAlignment="Left" VerticalAlignment="Top" Margin="55,315,0,0"/>
+        <TextBox Text="{Binding phone, Mode=OneWayToSource}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="98,315,0,0"/>
+        <Label Content="Email" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="240,315,0,0"/>
+        <TextBox Text="{Binding email, Mode=OneWayToSource}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="287,315,0,0"/>
+        <Label Content="Contact" HorizontalAlignment="Left" Margin="11,274,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
     </Grid>
 </Window>
